{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 22,
  "lineage": "b71adc4c-60b1-f6b4-b9ff-dee53623215c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/networkInterfaces/learning-tf-nic",
            "internal_domain_name_suffix": "u4lnnzmpiuaepbhws2igjfywba.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/publicIPAddresses/learning-tf-ip",
                "subnet_id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet/subnets/learning-tf-subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-0C-8A-90",
            "name": "learning-tf-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "learning-tf-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Compute/virtualMachines/learning-tf-vm"
          },
          "dependencies": [
            "azurerm_public_ip.test-ip",
            "azurerm_resource_group.test-rg",
            "azurerm_subnet.test-subnet",
            "azurerm_virtual_network.test-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/networkSecurityGroups/learning-tf-sg",
            "location": "westeurope",
            "name": "learning-tf-sg",
            "resource_group_name": "learning-tf-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/networkSecurityGroups/learning-tf-sg/securityRules/test-dev-rule",
            "name": "test-dev-rule",
            "network_security_group_name": "learning-tf-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "learning-tf-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-sg",
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/publicIPAddresses/learning-tf-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.232.21.34",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "learning-tf-ip",
            "resource_group_name": "learning-tf-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet/subnets/learning-tf-subnet-1",
            "name": "learning-tf-subnet-1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learning-tf-rg",
            "virtual_network_name": "learning-tf-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test-rg",
            "azurerm_virtual_network.test-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test-subnet-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet/subnets/learning-tf-subnet-1",
            "network_security_group_id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/networkSecurityGroups/learning-tf-sg",
            "subnet_id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet/subnets/learning-tf-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.test-sg",
            "azurerm_resource_group.test-rg",
            "azurerm_subnet.test-subnet",
            "azurerm_virtual_network.test-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e5d696a7-458f-4700-84f6-971064971608",
            "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet",
            "location": "westeurope",
            "name": "learning-tf-vnet",
            "resource_group_name": "learning-tf-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/virtualNetworks/learning-tf-vnet/subnets/learning-tf-subnet-1",
                "name": "learning-tf-subnet-1",
                "security_group": "/subscriptions/b61f91c6-2c2a-490c-b9a4-ec7e79885d9b/resourceGroups/learning-tf-rg/providers/Microsoft.Network/networkSecurityGroups/learning-tf-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    }
  ]
}